Daemon: implement reload

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "react/event-loop": ">=1.1",
         "psr/log": ">=1.0",
         "gipfl/json": ">=0.1",
-        "evenement/evenement": "*"
+        "evenement/evenement": "*",
+        "gipfl/cli": "^0.5.0",
+        "react/promise-timer": "^1.7"
     }
 }
