--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "psr/log": ">=1.0",
         "gipfl/json": ">=0.1",
         "evenement/evenement": "*",
-        "gipfl/cli": "^0.5.0",
-        "react/promise-timer": "^1.5"
+        "gipfl/cli": ">=0.5",
+        "react/promise-timer": ">=1.5"
     }
 }
